# g1_spinkick_example

./: .gitignore  README.md  play.py  pyproject.toml  train.py
spinkick_example/: __init__.py  spinkick_env_cfg.py
src/spinkick_example/: __init__.py  spinkick_env_cfg.py
